--- a/Dashbord/Mapstory SIte/2/2styles.css
+++ b/Dashbord/Mapstory SIte/2/2styles.css
@@ -5,13 +5,8 @@
 /*Gallery Styling*/
 div.gallery {
     margin: 5px;
-    border: 1px solid #ccc;
     float: left;
     width: 180px;
-}
-
-div.gallery:hover {
-    border: 1px solid #777;
 }
 
 div.gallery img {
@@ -24,61 +19,217 @@ div.desc {
     text-align: center;
 }
 /*---------------------------*/
+/*Split Screen Styling*/
+.split {
+    height: 100%;
+    width: 50%;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    overflow-x: hidden;
+    padding-top: 20px;
+}
+
+.left {
+    left: 0;
+    /*background-color: #111;*/
+    z-index: 99;
+}
+.right {
+    right: 0;
+    background-color: transparent;
+    /*z-index: 1;*/
+}
+
+#mapContainer{
+    position: absolute;
+    right: 0;
+
+    /*position: absolute;*/
+    /*right: 0;*/
+    width: 100%;
+    height: 110%;
+    /*z-index: 1;*/
+}
+
+
+
+/*---------------------------*/
 /*Button-Image Styling*/
 /* Container needed to position the button. Adjust the width as needed */
+/*.container {*/
+    /*position: relative;*/
+    /*width: 50%;*/
+/*}*/
+
+/*!* Make the image responsive *!*/
+/*!*.container img {*/
+    /*width: 100%;*/
+    /*height: auto;*/
+/*}*!*/
+
+/*!* Style the button and place it in the middle of the container/image *!*/
+/*.container .btn {*/
+    /*position: absolute;*/
+    /*top: 50%;*/
+    /*left: 50%;*/
+    /*transform: translate(-50%, -50%);*/
+    /*-ms-transform: translate(-50%, -50%);*/
+    /*background-color: #555;*/
+    /*color: white;*/
+    /*font-size: 16px;*/
+    /*padding: 12px 24px;*/
+    /*border: none;*/
+    /*cursor: pointer;*/
+    /*border-radius: 5px;*/
+/*}*/
+
+/*.container .btn:hover {*/
+    /*background-color: black;*/
+/*}*/
+
+/*New*/
 .container {
     position: relative;
-    width: 50%;
+    text-align: center;
+    color: white;
 }
 
-/* Make the image responsive */
-/*.container img {
+/* Bottom left text */
+.bottom-left {
+    position: absolute;
+    bottom: 8px;
+    left: 16px;
+    font-family: avenir;
+    font-color: #201D20;
+    font-size: 15pt;
+}
+
+
+
+.img-wrapper {
+    position: relative;
+}
+
+.img-responsive {
     width: 100%;
     height: auto;
-}*/
+}
 
-/* Style the button and place it in the middle of the container/image */
-.container .btn {
+.img-overlay {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    -ms-transform: translate(-50%, -50%);
-    background-color: #555;
-    color: white;
-    font-size: 16px;
-    padding: 12px 24px;
-    border: none;
-    cursor: pointer;
-    border-radius: 5px;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    text-align: center;
 }
 
-.container .btn:hover {
-    background-color: black;
+.img-overlay:before {
+    content: ' ';
+    display: block;
+    /* adjust 'height' to position overlay content vertically */
+    height: 50%;
 }
+
+.btn {
+    background: rgb(32,29,32);
+    background-image: url("../yellow_info.png");
+    background-size: contain;
+    background-position: right;
+    display: inline-block;
+    border: none;
+    padding: 10px;
+    width: 20px;
+    border-radius: 800px;
+    height: 20px;
+    transition: all 0.5s;
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.btnBlackArrow{
+    background: rgb(32,29,32);
+    background-image: url("../arrow.png");
+    background-size: contain;
+    background-position: right;
+    display: inline-block;
+    border: none;
+    padding: 10px;
+    width: 20px;
+    border-radius: 800px;
+    height: 20px;
+    transition: all 0.5s;
+    cursor: pointer;
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.btnYellowArrow{
+    background: rgb(32,29,32);
+    background-image: url("../yellow_arrow.png");
+    background-size: contain;
+    background-position: right;
+    display: inline-block;
+    border: none;
+    padding: 10px;
+    width: 20px;
+    border-radius: 800px;
+    height: 20px;
+    transition: all 0.5s;
+    cursor: pointer;
+    /*float: right;*/
+    position: absolute;
+    right: 0;
+    bottom: 0;
+}
+
+.btn:hover
+{
+    width: 30px;
+    height: 30px;
+}
+.btnBlackArrow:hover
+{
+    width: 30px;
+    height: 30px;
+}
+.btnYellowArrow:hover
+{
+    width: 30px;
+    height: 30px;
+}
+
 /*---------------------------*/
 /*Modal Box Styling*/
 /* The Modal (background) */
 .modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    position: absolute; /* Stay in place */
     z-index: 1; /* Sit on top */
-    left: 0;
-    top: 0;
-    width: 100%; /* Full width */
-    height: 100%; /* Full height */
-    overflow: auto; /* Enable scroll if needed */
+    /*top: 0;*/
+    left: 50%;
+    right: 50%;
+    margin-left: -240px;
+    margin-right: -240px;
+    width: 480px; /* Full width */
+    height: 580px; /* Full height */
+    overflow: hidden; /* Enable scroll if needed */
     background-color: rgb(0,0,0); /* Fallback color */
-    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+    background-color: #ffe101; /* Black w/ opacity */
+    border-radius: 25px;
 }
 
 /* Modal Content/Box */
 .modal-content {
-    background-color: #fefefe;
-    margin: 15% auto; /* 15% from the top and centered */
-    padding: 20px;
-    border: 1px solid #888;
-    width: 80%; /* Could be more or less, depending on screen size */
+    background-color: #ffe101;
+    /*margin: off; !* 15% from the top and centered *!*/
+    padding: 7px;
+    border: 1px solid #ffe101;
+    width: 90%; /* Could be more or less, depending on screen size */
 }
 
 .modal-image{
